<resources>
    <string name="app_name">Suicide Prevention</string>
    <string name="welcome_text">We Are Always Ready For Help</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="lorem">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer lacinia in nulla bibendum vestibulum. Phasellus quis libero tristique, aliquam dui lobortis, venenatis purus. Maecenas euismod risus eget massa hendrerit efficitur. Maecenas sodales id tellus molestie accumsan. Duis viverra lorem sit amet lobortis iaculis. Phasellus accumsan enim augue, sed laoreet sapien interdum vel. Interdum et malesuada fames ac ante ipsum primis in faucibus. Proin tristique luctus ultrices. Pellentesque ac placerat erat, vel vestibulum arcu. Nullam felis magna, convallis vel turpis non, dictum fermentum magna. Nunc in felis at ex euismod aliquet vestibulum non sapien. Vivamus in enim a orci vestibulum volutpat sit amet semper tellus. Sed tempor finibus commodo. Quisque at sollicitudin libero, ac ullamcorper purus.

Praesent blandit tellus aliquet neque rhoncus, sed finibus nibh venenatis. Nam lobortis urna id mauris lacinia, sed ultrices est tempus. Morbi quis risus et nisl imperdiet laoreet et id libero. Vivamus vitae auctor justo, et porta metus. Aliquam placerat volutpat lacus at faucibus. Fusce ipsum est, suscipit eu volutpat eu, eleifend nec neque. Morbi ut rutrum magna. Ut venenatis arcu a tellus rhoncus mattis. Sed est mauris, facilisis eget interdum molestie, lobortis et velit. Ut gravida augue at finibus consequat.

Morbi quis volutpat elit, sit amet ultricies neque. Donec nec feugiat sem. Nullam id neque ultrices, tristique enim sit amet, dictum nisl. Nam consectetur ex vitae mollis efficitur. Sed magna velit, maximus ut mi ac, tempus pellentesque risus. Cras accumsan mi vitae sem fermentum viverra. Cras malesuada, magna et feugiat laoreet, neque urna faucibus libero, at gravida ligula sem ac nisi. Integer aliquam risus sit amet mauris facilisis, eu gravida nunc eleifend. Ut eu odio eget tortor ultricies imperdiet quis ac ligula. Aenean tortor nisl, lacinia et enim quis, bibendum vestibulum elit. Etiam tincidunt ante sed felis pulvinar placerat. Aliquam semper, justo a lacinia porta, libero lacus feugiat dui, tempor tristique velit eros id metus.

Praesent lectus quam, tempor sit amet sagittis a, scelerisque eget nunc. Praesent vehicula justo nulla, sed vestibulum dui sagittis at. Maecenas commodo vel purus a ornare. Vestibulum sed vulputate felis. Sed semper sit amet justo et rhoncus. Cras mollis leo at est eleifend, nec laoreet neque luctus. Donec a auctor dui. Suspendisse vel interdum lectus. Praesent scelerisque dapibus mi nec rhoncus. Integer vestibulum pulvinar vehicula. Proin eget nisi at nunc porta posuere. Duis mattis mi sed suscipit tempor. Donec volutpat, nulla eu mattis pretium, sem lorem feugiat purus, vel aliquet libero felis non dolor.

Pellentesque at ultrices tortor, et consectetur leo. Ut iaculis, est in dapibus aliquet, nulla    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer lacinia in nulla bibendum vestibulum. Phasellus quis libero tristique, aliquam dui lobortis, venenatis purus. Maecenas euismod risus eget massa hendrerit efficitur. Maecenas sodales id tellus molestie accumsan. Duis viverra lorem sit amet lobortis iaculis. Phasellus accumsan enim augue, sed laoreet sapien interdum vel. Interdum et malesuada fames ac ante ipsum primis in faucibus. Proin tristique luctus ultrices. Pellentesque ac placerat erat, vel vestibulum arcu. Nullam felis magna, convallis vel turpis non, dictum fermentum magna. Nunc in felis at ex euismod aliquet vestibulum non sapien. Vivamus in enim a orci vestibulum volutpat sit amet semper tellus. Sed tempor finibus commodo. Quisque at sollicitudin libero, ac ullamcorper purus.

Praesent blandit tellus aliquet neque rhoncus, sed finibus nibh venenatis. Nam lobortis urna id mauris lacinia, sed ultrices est tempus. Morbi quis risus et nisl imperdiet laoreet et id libero. Vivamus vitae auctor justo, et porta metus. Aliquam placerat volutpat lacus at faucibus. Fusce ipsum est, suscipit eu volutpat eu, eleifend nec neque. Morbi ut rutrum magna. Ut venenatis arcu a tellus rhoncus mattis. Sed est mauris, facilisis eget interdum molestie, lobortis et velit. Ut gravida augue at finibus consequat.

Morbi quis volutpat elit, sit amet ultricies neque. Donec nec feugiat sem. Nullam id neque ultrices, tristique enim sit amet, dictum nisl. Nam consectetur ex vitae mollis efficitur. Sed magna velit, maximus ut mi ac, tempus pellentesque risus. Cras accumsan mi vitae sem fermentum viverra. Cras malesuada, magna et feugiat laoreet, neque urna faucibus libero, at gravida ligula sem ac nisi. Integer aliquam risus sit amet mauris facilisis, eu gravida nunc eleifend. Ut eu odio eget tortor ultricies imperdiet quis ac ligula. Aenean tortor nisl, lacinia et enim quis, bibendum vestibulum elit. Etiam tincidunt ante sed felis pulvinar placerat. Aliquam semper, justo a lacinia porta, libero lacus feugiat dui, tempor tristique velit eros id metus.

Praesent lectus quam, tempor sit amet sagittis a, scelerisque eget nunc. Praesent vehicula justo nulla, sed vestibulum dui sagittis at. Maecenas commodo vel purus a ornare. Vestibulum sed vulputate felis. Sed semper sit amet justo et rhoncus. Cras mollis leo at est eleifend, nec laoreet neque luctus. Donec a auctor dui. Suspendisse vel interdum lectus. Praesent scelerisque dapibus mi nec rhoncus. Integer vestibulum pulvinar vehicula. Proin eget nisi at nunc porta posuere. Duis mattis mi sed suscipit tempor. Donec volutpat, nulla eu mattis pretium, sem lorem feugiat purus, vel aliquet libero felis non dolor.

Pellentesque at ultrices tortor, et consectetur leo. Ut iaculis, est in dapibus aliquet, nulla    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer lacinia in nulla bibendum vestibulum. Phasellus quis libero tristique, aliquam dui lobortis, venenatis purus. Maecenas euismod risus eget massa hendrerit efficitur. Maecenas sodales id tellus molestie accumsan. Duis viverra lorem sit amet lobortis iaculis. Phasellus accumsan enim augue, sed laoreet sapien interdum vel. Interdum et malesuada fames ac ante ipsum primis in faucibus. Proin tristique luctus ultrices. Pellentesque ac placerat erat, vel vestibulum arcu. Nullam felis magna, convallis vel turpis non, dictum fermentum magna. Nunc in felis at ex euismod aliquet vestibulum non sapien. Vivamus in enim a orci vestibulum volutpat sit amet semper tellus. Sed tempor finibus commodo. Quisque at sollicitudin libero, ac ullamcorper purus.

Praesent blandit tellus aliquet neque rhoncus, sed finibus nibh venenatis. Nam lobortis urna id mauris lacinia, sed ultrices est tempus. Morbi quis risus et nisl imperdiet laoreet et id libero. Vivamus vitae auctor justo, et porta metus. Aliquam placerat volutpat lacus at faucibus. Fusce ipsum est, suscipit eu volutpat eu, eleifend nec neque. Morbi ut rutrum magna. Ut venenatis arcu a tellus rhoncus mattis. Sed est mauris, facilisis eget interdum molestie, lobortis et velit. Ut gravida augue at finibus consequat.

Morbi quis volutpat elit, sit amet ultricies neque. Donec nec feugiat sem. Nullam id neque ultrices, tristique enim sit amet, dictum nisl. Nam consectetur ex vitae mollis efficitur. Sed magna velit, maximus ut mi ac, tempus pellentesque risus. Cras accumsan mi vitae sem fermentum viverra. Cras malesuada, magna et feugiat laoreet, neque urna faucibus libero, at gravida ligula sem ac nisi. Integer aliquam risus sit amet mauris facilisis, eu gravida nunc eleifend. Ut eu odio eget tortor ultricies imperdiet quis ac ligula. Aenean tortor nisl, lacinia et enim quis, bibendum vestibulum elit. Etiam tincidunt ante sed felis pulvinar placerat. Aliquam semper, justo a lacinia porta, libero lacus feugiat dui, tempor tristique velit eros id metus.

Praesent lectus quam, tempor sit amet sagittis a, scelerisque eget nunc. Praesent vehicula justo nulla, sed vestibulum dui sagittis at. Maecenas commodo vel purus a ornare. Vestibulum sed vulputate felis. Sed semper sit amet justo et rhoncus. Cras mollis leo at est eleifend, nec laoreet neque luctus. Donec a auctor dui. Suspendisse vel interdum lectus. Praesent scelerisque dapibus mi nec rhoncus. Integer vestibulum pulvinar vehicula. Proin eget nisi at nunc porta posuere. Duis mattis mi sed suscipit tempor. Donec volutpat, nulla eu mattis pretium, sem lorem feugiat purus, vel aliquet libero felis non dolor.

Pellentesque at ultrices tortor, et consectetur leo. Ut iaculis, est in dapibus aliquet, nulla est dapibus purus, et interdum odio velit sed ex. Curabitur porta, ipsum non blandit molestie, justo ex molestie leo, ut tristique nunc metus ac ipsum. Fusce sed egestas ex, vel sagittis tellus. In placerat feugiat ullamcorper. Fusce eget molestie leo, eu semper nibh. Donec varius posuere ligula, id vehicula ex faucibus vitae. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec tristique quis ante rutrum bibendum. Morbi venenatis feugiat risus a hendrerit. Sed at blandit sem, non porttitor justo.

    </string>
    <string name="login">LOGIN</string>
    <string name="sign_up">Sign Up</string>
    <string name="not_a_user">Not A User?</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="cancel">Cancel</string>
    <string name="signup">SIGNUP</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
</resources>
