<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/gradient_style"
    android:layout_height="match_parent">
<!--
    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <android.support.v7.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:layout_width="368dp"
            android:layout_height="52dp"
            android:elevation="4dp"
            />

    </android.support.design.widget.AppBarLayout>-->


    <EditText
        android:id="@+id/editText"
        android:layout_width="0dp"
        android:layout_height="57dp"
        android:layout_marginEnd="19dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="79dp"
        android:ems="10"
        android:fontFamily="serif-monospace"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="0dp"
                android:layout_height="57dp"
                android:layout_marginEnd="19dp"
                android:layout_marginLeft="19dp"
                android:layout_marginRight="19dp"
                android:layout_marginStart="19dp"
                android:layout_marginTop="28dp"

                android:ems="10"
                android:fontFamily="serif-monospace"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textAlignment="center"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText"
                tools:layout_constraintLeft_creator="1"
                tools:layout_constraintRight_creator="1" />

            <Button
                android:id="@+id/button"

                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:elevation="24dp"
                android:fontFamily="serif-monospace"
                android:text="@string/sign_in"
                android:textAppearance="@android:style/TextAppearance.Material.Button"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="@+id/editText2"
                app:layout_constraintRight_toRightOf="@+id/editText2"
                app:layout_constraintTop_toBottomOf="@+id/editText2"
                tools:layout_constraintLeft_creator="1"
                tools:layout_constraintRight_creator="1"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="350dp"
                android:layout_height="43dp"
                android:layout_marginLeft="18dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:fontFamily="serif-monospace"
                android:text="@string/not_a_user"
                android:textAllCaps="false"
                android:textAppearance="@android:style/TextAppearance.Material"
                android:textSize="25sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button"
                app:layout_constraintVertical_bias="0.033" />

            <Button
                android:id="@+id/button2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="26dp"
                android:elevation="24dp"
                android:fontFamily="serif-monospace"
                android:text="@string/sign_up"

                android:textAppearance="@android:style/TextAppearance.Material.Button"
                app:layout_constraintLeft_toLeftOf="@+id/editText2"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                tools:layout_constraintLeft_creator="1"
                tools:layout_constraintRight_creator="1"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                app:layout_constraintRight_toRightOf="@+id/editText2" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="345dp"
                android:layout_height="43dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="0dp"
                android:fontFamily="serif-monospace"
                android:gravity="center"

                android:text="@string/login"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textSize="36sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/editText"
                app:layout_constraintLeft_toLeftOf="@+id/editText"
                app:layout_constraintRight_toRightOf="@+id/editText" />
</android.support.constraint.ConstraintLayout>
